2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable coreboot information commands even when not loaded as
	coreboot payload (e.g. when loaded from SeaBIOS-as-payload).

2013-06-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Support for cbfs. Also factor out the part which is common
	for all archives to a separate module. This splits tar from cpio
	as they are very different but keeps cpio, cpio_be, odc and newc
	together since they're very similar.

2013-06-15  David Michael  <fedora.dm0@gmail.com>

	* configure.ac (FREETYPE): Change AC_CHECK_PROGS to AC_CHECK_TOOLS.
	(freetype_cflags,freetype_libs): Change freetype-config to $FREETYPE.

2013-06-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_script_eval.in: Really add the eval test.

2013-06-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Move flavour-specific parts out of common cpio.c file and
	rename remaining to cpio_common.c

2013-06-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/script/execute.c (grub_script_execute_sourcecode): Split
	off new function grub_script_execute_new_scope. Change callers to use
	either of them as appropriate.
	* grub-core/commands/eval.c: New command eval.
	* docs/grub.texi (Commands): Document it.

2013-06-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_set): Use grub_env_get
	to fetch values when listing.

2013-06-07  Andrey Borzenkov <arvidjaar@gmail.com>

	Fix make dist on non-pc.

2013-06-07  Francesco Lavra  <francescolavra.fl@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_ls): Fix handling of paths
	without a device name.

2013-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove enable_executable_check as it's not needed anymore.
	Reported by: dougray.

2013-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (insert_array): Fix order to discover
	ambigouos RAID before discovering RAIDs on top of it.
	Reported by: bodom.
