@@ -1,5 +1,9 @@
 2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Add support for processed coreboot payload chainloading.
+
+2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Enable coreboot information commands even when not loaded as
 	coreboot payload (e.g. when loaded from SeaBIOS-as-payload).
 
